// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toggleModal reducer closes a modal if already open 1`] = `
Object {
  "modalState": Object {
    "categoryModalVisible": false,
    "colorModalVisible": false,
  },
}
`;

exports[`toggleModal reducer closes other modal when this opened 1`] = `
Object {
  "modalState": Object {
    "categoryModalVisible": true,
    "colorModalVisible": false,
  },
}
`;

exports[`toggleModal reducer opens a modal if closed 1`] = `
Object {
  "modalState": Object {
    "categoryModalVisible": false,
    "colorModalVisible": true,
  },
}
`;
